@@ -1,3 +1,10 @@
+2009-07-27 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/cairo/CairoFontEnumerator.m,
+	* Source/xlib/GSXftFontInfo.m: Use DejaVu as another fallback
+	font, as Bitstream Vera and FreeSans are no longer supplied
+	directly by Debian.
+
 2009-07-13 Fred Kiefer <FredKiefer@gmx.de>
 
         * Source/winlib/WIN32GState.m (-_paintPath:) Only draw when the
